--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,28 +8,40 @@
     <!-- Search Bar -->
     <EditText
         android:id="@+id/et_search"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="284dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/iv_home_page_rectangle2"
         android:hint="Search for Recipes"
-        android:padding="12dp"
         android:imeOptions="actionSearch"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Search Button -->
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="Search"
+        app:layout_constraintStart_toEndOf="@id/et_search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/et_search"
+        app:layout_constraintBottom_toBottomOf="@id/et_search" />
 
     <!-- Button for Filter Pop-up -->
     <Button
         android:id="@+id/btn_show_filters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Filter"
         app:layout_constraintTop_toBottomOf="@id/et_search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Scrollable Filter Section (Initially Hidden) -->
     <ScrollView
@@ -176,6 +188,21 @@
                     android:layout_height="wrap_content"
                     android:text="Eggs" />
             </RadioGroup>
+
+            <!-- Clear Filters Button -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="16dp">
+
+                <Button
+                    android:id="@+id/btn_clear_filters"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Clear Filters" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
