--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -20,14 +20,13 @@
             android:scaleType="centerCrop" />
 
         <ImageView
-            android:id="@+id/saveIcon"
+            android:id="@+id/iv_save_recipe"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             android:layout_margin="8dp"
-            android:contentDescription="Save Recipe"
-            android:background="@drawable/image_group1" />
+            android:src="@drawable/image_group1" />
 
         <TextView
             android:id="@+id/tv_recipe_title"
