--- a/app/src/main/res/layout/activity_meal_planner_page.xml
+++ b/app/src/main/res/layout/activity_meal_planner_page.xml
@@ -34,17 +34,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/dateRange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="18 Aug - 24 Aug"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <!-- ScrollView for the day selection -->
     <ScrollView
@@ -55,7 +44,7 @@
         app:layout_constraintBottom_toTopOf="@id/buttonDone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dateRange">
+        app:layout_constraintTop_toBottomOf="@id/titleText">
 
         <LinearLayout
             android:id="@+id/daySelectionLayout"
